// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Include: IDT2 Canonical should render 1`] = `
.c1 {
  max-width: 100%;
  overflow: scroll hidden;
  margin-bottom: 2.5rem;
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div>
  <div
    class="c0"
    dir="ltr"
  >
    <div
      class="c1"
      id="include-1"
    >
      <script
        src="https://news.test.files.bbci.co.uk/include/idt2/static/js/dataPic.64a69df2.js"
        type="text/javascript"
      />
    </div>
  </div>
</div>
`;

exports[`Include: IDT2 Canonical should render fallback when disallowed scripts are present 1`] = `
.c1 {
  display: block;
  width: 100%;
  visibility: visible;
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div>
  <div
    class="c0"
    dir="ltr"
  >
    <img
      alt="An image."
      class="c1"
      id="include-1"
      src="https://www.bbc.com/ws/includes/idt2/image/816"
      srcset="https://www.bbc.com/ws/includes/idt2/image/470 470w,https://www.bbc.com/ws/includes/idt2/image/816 816w"
    />
  </div>
</div>
`;
